2005-09-08  Craig Rodrigues  <rodrigc@gcc.gnu.org>

	Backport from mainline
	2005-09-01  Craig Rodrigues  <rodrigc@gcc.gnu.org>

	* c-decl.c (diagnose_mismatched_decls):  With -Wredundant-decls,
	do not issue warning for a variable definition following
	a declaration.

2005-09-02  Richard Sandiford  <richard@codesourcery.com>

	PR c/22061
	* c-decl.c (push_parm_decl): Push and pop x_dont_save_pending_sizes_p
	around the call to grokdeclarator.  Call grokdeclarator with the
	field set to 0.
	(store_parm_decls): Always store the pending_sizes in cfun.
	(c_expand_body_1): Call put_pending_sizes.
	* c-objc-common.c (c_cannot_inline_tree_fn): Always check
	pending_sizes.

2005-09-01  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/23478
	* regs.h (reg_info): Add throw_calls_crossed.
	(REG_N_THROWING_CALLS_CROSSED): Define.
	* flow.c (allocate_reg_life_data): Initialize
	REG_N_THROWING_CALLS_CROSSED.
	(propagate_one_insn, attempt_auto_inc): Update
	REG_N_THROWING_CALLS_CROSSED.
	* local-alloc.c (struct qty): Add n_throwing_calls_crossed field.
	(alloc_qty): Initialize it.
	(update_equiv_regs): Clear REG_N_THROWING_CALLS_CROSSED.
	(combine_regs): Combine also n_throwing_calls_crossed fields.
	(find_free_reg): Don't attempt to caller-save pseudos crossing
	calls that might throw.
	* global.c (struct allocno): Add throwing_calls_crossed field.
	(global_alloc): Initialize throwing_calls_crossed.
	(find_reg): Don't attempt to caller-save pseudos crossing calls that
	might throw.

2005-09-01  Richard Earnshaw  <richard.earnshaw@arm.com>

	PR rtl-optimization/17810 target/15342
	* regrename.c: Fix polluted patch in previous change.

2005-09-01  Richard Earnshaw  <richard.earnshaw@arm.com>

	PR rtl-optimization/17810
	Backport
	2004-11-04  Richard Sandiford  <rsandifo@redhat.com>
	PR target/15342
	* regrename.c (scan_rtx): Treat the destinations of SETs and CLOBBERs
	as OP_INOUT if the instruction is predicated.

2005-08-31  David Edelsohn  <edelsohn@gnu.org>
