@@ -1,3 +1,9 @@
+2005-09-09  Richard Guenther  <rguenther@suse.de>
+
+	PR c++/23624
+	* fold-const.c (fold): Check truth_value_p before calling
+	invert_truthvalue.
+
 2005-09-08  Craig Rodrigues  <rodrigc@gcc.gnu.org>
 
 	Backport from mainline
